update user model
